--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,192 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+
+:root {
+	--red-color: #e64b4b;
+	--dark-bg-color: #202c37;
+	--article-color: hsl(209, 23%, 22%);
+	--text-color: hsl(0, 0%, 100%);
+	--light-mode-text: hsl(200, 15%, 8%);
+	--light-mode-input: hsl(0, 0%, 52%);
+	--light-mode-background: hsl(0, 0%, 98%);
+}
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
+}
+html {
+	box-sizing: border-box;
+	font-size: 62.5%;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: 'Nunito Sans', sans-serif;
+	font-size: 1.6rem;
+	background-color: var(--dark-bg-color);
+}
+img {
+	max-width: 100%;
+}
+article {
+	margin: 0;
+}
+ul {
+	list-style-type: none;
+}
+a {
+	text-decoration: none;
+}
+h1,
+h2,
+h3,
+p {
+	margin: 0;
+	color: var(--text-color);
+}
+ol {
+	padding: 0;
+}
+/*-------------------utilities*-------------------------*/
+
+.container {
+	max-width: 120rem;
+	margin: 0 auto;
+}
+/*----------------------Header-------------------------*/
+.header {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	width: 80%;
+}
+.header__title {
+	text-align: center;
+	font-size: 4rem;
+	padding: 2rem;
+	color: var(--text-color);
+	text-shadow: 0.2rem 0.2rem 0.3rem rgba(255, 255, 255, 0.1);
+	margin: 0;
+}
+.grid {
+	gap: 3rem;
+	display: grid;
+	grid-auto-rows: 20rem;
+	grid-template-columns: repeat(auto-fill, minmax(min(100%, 30rem), 1fr));
+	margin: 0 auto;
+	padding: 5rem 3rem;
+}
+/* .grid.hide {
+	display: none;
+} */
+.grid__item {
+	position: relative;
+}
+.grid__img {
+	border-radius: 0.3rem;
+	height: 20rem;
+	width: 100%;
+	object-fit: cover;
+}
+.grid__country-name {
+	bottom: 0;
+	left: 0;
+	color: var(--text-color);
+	font-size: 2rem;
+	position: absolute;
+	background: #00000080;
+	padding: 0.5rem 0 0.5rem 1rem;
+	width: 100%;
+}
+.form__input {
+	border: none;
+	border-radius: 0.2rem;
+	color: var(--dark-bg-color);
+	font-size: 2rem;
+	width: 100%;
+	padding: 1rem;
+	background: var(--light-mode-background);
+	outline: none;
+}
+.form__input:focus {
+	background: var(--light-mode-background);
+	box-shadow: 0 0 0.3rem 0.3rem #6ea4bf;
+}
+.form__input::placeholder {
+	font-weight: 300;
+	font-size: 2rem;
+}
+.card {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	padding: 0 2rem;
+}
+/* .card.hide {
+	display: none;
+} */
+.card__name {
+	padding: 1rem;
+	font-size: 2.2rem;
+}
+.card__img {
+	max-width: 100%;
+	border-radius: 0.3rem;
+	max-height: 35rem;
+	margin: 0 auto;
+}
+.card__details {
+	background-color: #4caf50;
+	border-radius: 0.3rem;
+	color: var(--text-color);
+	margin-top: 2rem;
+	padding: 0.5rem 3rem;
+	font-size: 2rem;
+	transition: 0.3s ease;
+}
+.card__details:hover {
+	background-color: #35a339;
+	box-shadow: 0 0 0.2rem 0.2rem #4caf50;
+}
+.card__more-details {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: center;
+	border-radius: 0.4rem;
+	background: var(--dark-bg-color);
+	box-shadow: -0.5px 0.5rem 1rem #1b252e, 0.5rem -0.5rem 1rem #253340;
+	padding-top: 2rem;
+	width: 90%;
+	margin-bottom: 3rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card__text {
+	font-size: 2rem;
+	padding: 0.5rem;
+	text-align: center;
+}
+.card__text:first-of-type {
+	margin-top: 1rem;
+}
+.card__text:last-of-type {
+	margin-bottom: 1.5rem;
+}
+.card__text-bold {
+	font-weight: 800;
+}
+.error {
+	background-color: var(--red-color);
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	max-width: 80%;
+}
+.error__text {
+	text-align: center;
+	border-radius: 0.3rem;
+	padding: 1rem;
 }
