--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;500;700&display=swap');
 
 :root {
+	--primary-color: #53f8a8;
+	--primaryDark-color: #1aaa65;
+	--border: 0 0 0 0.1rem var(--primary-color);
+	--outer-shadow: 0.3rem 0.3rem 0.3rem #222327, -0.3rem -0.3rem 0.3rem #363636;
+	--inner-shadow: inset 0.3rem 0.3rem 0.3rem #222327,
+		inset -0.3rem -0.3rem 0.3rem #363636;
+	--outer-shadow-0: 0 0 0 #222327, 0 0 0 #363636;
+	--inner-shadow-0: inset 0 0 0 #222327, inset 0 0 0 #363636;
+	--dark-bg-color: #182027;
+	--secondaryDark-bg-color: #15181d;
 	--red-color: #e64b4b;
-	--dark-bg-color: #202c37;
-	--article-color: hsl(209, 23%, 22%);
-	--text-color: hsl(0, 0%, 100%);
-	--light-mode-text: hsl(200, 15%, 8%);
-	--light-mode-input: hsl(0, 0%, 52%);
-	--light-mode-background: hsl(0, 0%, 98%);
+	--white: #ffffff;
+	--black: #000000;
 }
 *,
 *:before,
@@ -19,7 +25,7 @@ html {
 	font-size: 62.5%;
 }
 body {
-	font-family: 'Nunito Sans', sans-serif;
+	font-family: 'Hind', sans-serif;
 	font-size: 1.6rem;
 	background-color: var(--dark-bg-color);
 }
@@ -40,7 +46,7 @@ h2,
 h3,
 p {
 	margin: 0;
-	color: var(--text-color);
+	color: var(--white);
 }
 ol {
 	padding: 0;
@@ -51,64 +57,121 @@ ol {
 	max-width: 120rem;
 	margin: 0 auto;
 }
+
 /*----------------------Header-------------------------*/
 .header {
 	display: flex;
 	flex-wrap: wrap;
-	flex-direction: column;
-	width: 80%;
+	gap: 2rem;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+.header__container {
+	width: 100%;
 }
 .header__title {
-	text-align: center;
+	line-height: 0;
 	font-size: 4rem;
-	padding: 2rem;
-	color: var(--text-color);
+	margin: 2rem 0 0;
+	color: var(--white);
 	text-shadow: 0.2rem 0.2rem 0.3rem rgba(255, 255, 255, 0.1);
-	margin: 0;
+}
+.header__title--app {
+	line-height: 0;
+	margin: 2rem 0 0;
+	font-size: 4rem;
+	color: var(--white);
+	text-shadow: 0.2rem 0.2rem 0.3rem rgba(255, 255, 255, 0.1);
+}
+.header__icon {
+	margin: 1rem 0 0;
+	font-size: 5rem;
+	color: var(--primary-color);
 }
 .grid {
-	gap: 3rem;
+	gap: 7rem 2rem;
 	display: grid;
 	grid-auto-rows: 20rem;
 	grid-template-columns: repeat(auto-fill, minmax(min(100%, 30rem), 1fr));
 	margin: 0 auto;
 	padding: 5rem 3rem;
 }
-/* .grid.hide {
-	display: none;
-} */
 .grid__item {
+	border-radius: 1rem;
 	position: relative;
+	background-color: var(--secondaryDark-bg-color);
+	padding: 1rem;
+	width: 100%;
+	height: 25rem;
 }
 .grid__img {
-	border-radius: 0.3rem;
+	border-radius: 0.5rem;
 	height: 20rem;
 	width: 100%;
 	object-fit: cover;
+	transition: 0.3s ease;
+}
+.grid__img:hover {
+	transform: translateY(-2.5rem);
+	cursor: pointer;
 }
 .grid__country-name {
+	border-bottom-left-radius: 1rem;
+	border-bottom-right-radius: 1rem;
 	bottom: 0;
 	left: 0;
-	color: var(--text-color);
+	color: var(--white);
 	font-size: 2rem;
 	position: absolute;
 	background: #00000080;
 	padding: 0.5rem 0 0.5rem 1rem;
 	width: 100%;
 }
-.form__input {
-	border: none;
-	border-radius: 0.2rem;
-	color: var(--dark-bg-color);
+.grid__details-btn {
+	background-color: var(--primary-color);
+	color: var(--secondaryDark-bg-color);
+	margin: 0 auto;
+	padding: 0.25rem 3rem;
 	font-size: 2rem;
+	font-weight: 500;
+	transition: 0.5s ease;
+	text-align: center;
+	position: absolute;
+	bottom: 13%;
+	left: 0;
 	width: 100%;
-	padding: 1rem;
-	background: var(--light-mode-background);
+	opacity: 0;
+	/* transform: translateY(-0.5rem); */
+}
+.grid__item:hover .grid__details-btn {
+	opacity: 1;
+}
+
+/*----------------------Form--------------------------*/
+.form {
+	width: 80%;
+	margin: 1rem 0;
+}
+.form__input {
+	background: var(--secondaryDark-bg-color);
+	border: none;
+	border-radius: 3rem;
+	color: var(--white);
+	font-size: 2rem;
 	outline: none;
+	padding: 1rem 3rem;
+	transition: all 0.3s ease;
+	width: 100%;
+}
+.form__input:hover {
+	box-shadow: var(--inner-shadow);
 }
 .form__input:focus {
-	background: var(--light-mode-background);
-	box-shadow: 0 0 0.3rem 0.3rem #6ea4bf;
+	box-shadow: var(--border);
+}
+.form__input::after {
+	border-radius: 3rem;
 }
 .form__input::placeholder {
 	font-weight: 300;
@@ -123,60 +186,203 @@ ol {
 	width: 100%;
 	padding: 0 2rem;
 }
-/* .card.hide {
-	display: none;
-} */
 .card__name {
 	padding: 1rem;
 	font-size: 2.2rem;
+}
+.card__name--detail {
+	color: var(--primary-color);
+}
+.card__img-container {
+	padding: 5rem 2rem;
+	width: 50%;
+	background-color: var(--dark-bg-color);
+	border-radius: 1rem;
 }
 .card__img {
 	max-width: 100%;
 	border-radius: 0.3rem;
 	max-height: 35rem;
 	margin: 0 auto;
+	border-radius: 0.5rem;
 }
-.card__details {
-	background-color: #4caf50;
-	border-radius: 0.3rem;
-	color: var(--text-color);
-	margin-top: 2rem;
+.card__details-btn {
+	background-color: var(--primary-color);
+	border-radius: 1rem;
+	color: var(--secondaryDark-bg-color);
+	margin: 2rem 0;
 	padding: 0.5rem 3rem;
 	font-size: 2rem;
+	font-weight: 500;
 	transition: 0.3s ease;
 }
-.card__details:hover {
-	background-color: #35a339;
-	box-shadow: 0 0 0.2rem 0.2rem #4caf50;
+.card__details-btn:hover {
+	background-color: var(--primaryDark-color);
+	box-shadow: 0 0 0.2rem 0.2rem var(--primaryDark-color);
 }
-.card__more-details {
+/*---------------------------Card Details------------------------*/
+.card-details {
 	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
 	justify-content: center;
-	border-radius: 0.4rem;
-	background: var(--dark-bg-color);
-	box-shadow: -0.5px 0.5rem 1rem #1b252e, 0.5rem -0.5rem 1rem #253340;
-	padding-top: 2rem;
-	width: 90%;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	padding: 0 2rem;
+}
+.card-details .card-details__more-details {
+	display: grid;
+	gap: 3rem;
+	grid-template-columns: repeat(2, 1fr);
+	margin: 0 auto;
+	border-radius: 1rem;
+	background: var(--secondaryDark-bg-color);
+	box-shadow: var(--outer-shadow-0);
+	gap: 3rem;
+	padding: 2rem 2rem;
+	width: 100%;
 	margin-bottom: 3rem;
 }
-
-.card__text {
+@media (max-width: 768px) {
+	.card-details__more-details {
+		grid-template-columns: repeat(repeat(1, 1fr));
+	}
+}
+.card-details__name {
+	border-radius: 1rem;
+	padding: 2rem;
+	font-size: 2.4rem;
+	background-color: var(--secondaryDark-bg-color);
+	margin: 2rem;
+	text-align: center;
+	width: 100%;
+	color: var(--white);
+}
+.card-details__img-container {
+	padding: 5rem 2rem;
+	background-color: var(--dark-bg-color);
+	border-radius: 1rem;
+	width: 100%;
+}
+@media (max-width: 576px) {
+	.card-details__img-container {
+		grid-column: 1/3;
+	}
+}
+.card-details__img {
+	border-radius: 0.3rem;
+	max-height: 35rem;
+	margin: 0 auto;
+	border-radius: 0.5rem;
+	width: 100%;
+}
+.card-details__text-container {
+	border-radius: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--dark-bg-color);
+	width: 100%;
+}
+@media (max-width: 576px) {
+	.card-details__text-container {
+		grid-column: 1/3;
+	}
+}
+.card-details__text {
+	color: var(--white);
 	font-size: 2rem;
 	padding: 0.5rem;
-	text-align: center;
+	height: 100%;
 }
-.card__text:first-of-type {
-	margin-top: 1rem;
+.card-details__text:first-of-type {
+	margin-top: 1.5rem;
 }
-.card__text:last-of-type {
+.card-details__text:last-of-type {
 	margin-bottom: 1.5rem;
 }
-.card__text-bold {
-	font-weight: 800;
+.card-details__text-bold {
+	font-weight: 700;
+	color: var(--primary-color);
 }
+
+/*-------------------------Weather Page--------------------*/
+.weather {
+	min-height: 100vh;
+	position: relative;
+	transition: 0.4 ease-out;
+}
+.weather__video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: -1;
+}
+.weather__section {
+	display: flex;
+	gap: 3rem;
+	align-items: center;
+	flex-direction: column;
+	min-height: 100vh;
+	min-width: 100%;
+	background-image: linear-gradient(to bottom, #00000040, #000000bf);
+	padding: 3rem;
+}
+.weather__location-box {
+	margin-top: 2rem;
+	padding: 2rem;
+	background: #00000080;
+	border-radius: 2rem;
+	width: 70%;
+}
+.weather__location {
+	color: var(--primary-color);
+	font-size: 3.5rem;
+	text-align: center;
+	padding: 1rem;
+}
+.weather__country {
+	text-align: center;
+}
+.weather__date {
+	color: var(--primary-color);
+	font-size: 2rem;
+	text-align: center;
+	padding: 1rem;
+	font-weight: 300;
+}
+.weather__data-box {
+	padding: 2rem;
+	background: #00000080;
+	border-radius: 2rem;
+	width: 70%;
+}
+.weather__temperature {
+	color: var(--primary-color);
+	font-size: 6rem;
+	font-weight: 500;
+	text-align: center;
+	padding: 1rem;
+}
+.weather__main {
+	color: var(--primary-color);
+	font-size: 3rem;
+	font-weight: 500;
+	text-align: center;
+	padding: 1rem;
+}
+.weather__icon {
+	text-align: center;
+	color: var(--white);
+	font-size: 6rem;
+}
+/*--------------ERRORS------------------------*/
 .error {
+	border-radius: 3rem;
 	background-color: var(--red-color);
 	display: flex;
 	flex-wrap: wrap;
@@ -186,7 +392,35 @@ ol {
 	max-width: 80%;
 }
 .error__text {
+	color: var(--white);
 	text-align: center;
 	border-radius: 0.3rem;
+	padding: 1rem;
+}
+.full-error {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	background-color: #15151f;
+	height: 100vh;
+	width: 100%;
+	background-position: cover;
+}
+.full-error__text {
+	font-weight: 700;
+	color: var(--red-color);
+	font-size: 4rem;
+}
+.full-error__icon {
+	font-size: 5rem;
+	color: white;
+	width: 100%;
+	margin: 2rem;
+}
+.full-error__description {
+	font-weight: 300;
+	color: var(--white);
+	font-size: 1.6rem;
 	padding: 1rem;
 }
