--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,17 @@ ol {
 	padding: 0;
 }
 /*-------------------utilities*-------------------------*/
-
+.home-btn {
+	color: white;
+	display: block;
+	font-size: 3rem;
+	margin: 1rem auto;
+	text-align: center;
+}
+.home-btn:hover {
+	color: var(--primary-color);
+	transform: scale(1.1);
+}
 .container {
 	max-width: 120rem;
 	margin: 0 auto;
@@ -94,7 +104,7 @@ ol {
 	display: grid;
 	grid-auto-rows: 20rem;
 	grid-template-columns: repeat(auto-fill, minmax(min(100%, 30rem), 1fr));
-	margin: 0 auto;
+	margin: 0 auto 5rem;
 	padding: 5rem 3rem;
 }
 .grid__item {
@@ -117,15 +127,15 @@ ol {
 	cursor: pointer;
 }
 .grid__country-name {
+	background: #00000080;
 	border-bottom-left-radius: 1rem;
 	border-bottom-right-radius: 1rem;
 	bottom: 0;
-	left: 0;
 	color: var(--white);
 	font-size: 2rem;
-	position: absolute;
-	background: #00000080;
+	left: 0;
 	padding: 0.5rem 0 0.5rem 1rem;
+	position: absolute;
 	width: 100%;
 }
 .grid__details-btn {
@@ -181,10 +191,14 @@ ol {
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
+	justify-content: center;
+	padding: 2rem;
+	position: relative;
 	width: 100%;
-	padding: 0 2rem;
+}
+.card__box {
+	position: relative;
 }
 .card__name {
 	padding: 1rem;
@@ -206,19 +220,56 @@ ol {
 	margin: 0 auto;
 	border-radius: 0.5rem;
 }
+.card__buttons {
+	display: flex;
+	gap: 3rem;
+	justify-content: space-around;
+	align-items: center;
+	padding: 2rem 0;
+	width: 80%;
+}
 .card__details-btn {
 	background-color: var(--primary-color);
 	border-radius: 1rem;
 	color: var(--secondaryDark-bg-color);
-	margin: 2rem 0;
-	padding: 0.5rem 3rem;
+	padding: 0.5rem 1rem;
 	font-size: 2rem;
 	font-weight: 500;
+	margin: 1rem;
 	transition: 0.3s ease;
+}
+.card__icon {
+	color: var(--white);
+	margin: 0 1rem;
+	text-align: center;
 }
 .card__details-btn:hover {
 	background-color: var(--primaryDark-color);
 	box-shadow: 0 0 0.2rem 0.2rem var(--primaryDark-color);
+}
+
+@media (max-width: 768px) {
+	.card__buttons {
+		width: 95%;
+	}
+}
+.card__close-btn {
+	background-color: transparent;
+	border: none;
+	border-radius: 50%;
+	border-radius: 1rem;
+	color: var(--white);
+	font-weight: 500;
+	transition: 0.3s ease;
+}
+
+.card__close-btn:hover {
+	cursor: pointer;
+	transform: scale(1.2);
+	color: var(--red-color);
+}
+.card__close-icon {
+	font-size: 3rem;
 }
 /*---------------------------Card Details------------------------*/
 .card-details {
