--- a/src/index.css
+++ b/src/index.css
@@ -310,7 +310,7 @@ ol {
 	position: absolute;
 	top: 0;
 	left: 0;
-	max-width: 100%;
+	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	z-index: -2;
@@ -410,21 +410,26 @@ ol {
 	z-index: -1;
 }
 .weather__section {
-	display: flex;
-	gap: 3rem;
 	align-items: center;
+	background-image: linear-gradient(to bottom, #00000040, #000000bf);
+	display: flex;
 	flex-direction: column;
+	gap: 3rem;
+	justify-content: center;
 	min-height: 100vh;
 	min-width: 100%;
-	background-image: linear-gradient(to bottom, #00000040, #000000bf);
-	padding: 3rem;
 }
 .weather__location-box {
-	margin-top: 2rem;
 	padding: 2rem;
 	background: #00000080;
 	border-radius: 2rem;
 	width: 70%;
+}
+
+@media (max-width: 576px) {
+	.weather__location-box {
+		width: 90%;
+	}
 }
 .weather__location {
 	color: var(--primary-color);
@@ -435,6 +440,7 @@ ol {
 .weather__country {
 	text-align: center;
 }
+
 .weather__date {
 	color: var(--primary-color);
 	font-size: 2rem;
@@ -447,6 +453,11 @@ ol {
 	background: #00000080;
 	border-radius: 2rem;
 	width: 70%;
+}
+@media (max-width: 576px) {
+	.weather__data-box {
+		width: 90%;
+	}
 }
 .weather__temperature {
 	color: var(--primary-color);
@@ -476,7 +487,7 @@ ol {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	max-width: 80%;
+	max-width: 70%;
 }
 .error__text {
 	color: var(--white);
