--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,19 @@
 :root {
 	--primary-color: #4768fa;
 	--primaryDark-color: #2542c2;
-	--border: 0 0 0 0.1rem var(--primary-color);
-	--outer-shadow: 0.3rem 0.3rem 0.3rem #222327, -0.3rem -0.3rem 0.3rem #363636;
-	--inner-shadow: inset 0.3rem 0.3rem 0.3rem #222327,
-		inset -0.3rem -0.3rem 0.3rem #363636;
-	--outer-shadow-0: 0 0 0 #222327, 0 0 0 #363636;
-	--inner-shadow-0: inset 0 0 0 #222327, inset 0 0 0 #363636;
-	--dark-bg-color: #18202780;
-	--secondaryDark-bg-color: #15181dbf;
-	--red-color: #e64b4b;
 	--white: #ffffff;
 	--black: #000000;
+	--red-color: #e64b4b;
+	--secondaryDark-bg-color: #15181dbf;
+	--dark-bg-color: #18202780;
+	--border: 0 0 0 0.1rem var(--primary-color);
+	--border-blue: 0.05rem 0.05rem 0.05rem var(--primaryDark-color),
+		-0.2rem 0.2rem 0.2rem var(--primaryDark-color), -0.2rem -0.2rem 0.2rem var(--primaryDark-color),
+		0.2rem -0.2rem 0.2rem var(--primaryDark-color);
+	--outer-shadow: 0.3rem 0.3rem 0.3rem #222327, -0.3rem -0.3rem 0.3rem #363636;
+	--inner-shadow: inset 0.3rem 0.3rem 0.3rem #222327, inset -0.3rem -0.3rem 0.3rem #363636;
+	--outer-shadow-0: 0 0 0 #222327, 0 0 0 #363636;
+	--inner-shadow-0: inset 0 0 0 #222327, inset 0 0 0 #363636;
 }
 *,
 *:before,
@@ -432,21 +434,23 @@ ol {
 	}
 }
 .weather__location {
-	color: var(--primary-color);
+	color: var(--white);
 	font-size: 3.5rem;
 	text-align: center;
 	padding: 1rem;
+	text-shadow: var(--border-blue);
 }
 .weather__country {
 	text-align: center;
 }
 
 .weather__date {
-	color: var(--primary-color);
+	color: var(--white);
 	font-size: 2rem;
 	text-align: center;
 	padding: 1rem;
 	font-weight: 300;
+	text-shadow: var(--border-blue);
 }
 .weather__data-box {
 	padding: 2rem;
@@ -460,18 +464,20 @@ ol {
 	}
 }
 .weather__temperature {
-	color: var(--primary-color);
+	color: var(--white);
 	font-size: 6rem;
 	font-weight: 500;
 	text-align: center;
 	padding: 1rem;
+	text-shadow: var(--border-blue);
 }
 .weather__main {
-	color: var(--primary-color);
+	color: var(--white);
 	font-size: 3rem;
 	font-weight: 500;
 	text-align: center;
 	padding: 1rem;
+	text-shadow: var(--border-blue);
 }
 .weather__icon {
 	text-align: center;
